--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <title>Simple URL Redirect</title>
 
-<meta http-equiv = "refresh" content = "0; url = https://driftershoots.com/gallery" />   
+<meta http-equiv = "refresh" content = "0; url = https://driftershoots.com" />   
 
 </head>
 </html>
